# TOF-VL53L1X

./: .gitignore  CMakeLists.txt  readme.md
core/: VL53L1X_api.h
platform/: vl53l1_linux_platform.c
src/: main.c
